# XTP.GO

./: .gitignore  qc.sh
C_porting_XTP/: .gitignore  gen_cgo_code.py
C_porting_XTP/include/CXTPApi/: LCxtp_quote_api.h  LCxtp_trader_api.h  common_macro.h  lcdefine.h  xtp_cmessage.h
C_porting_XTP/include/XTP/: xoms_api_struct.h  xquote_api_struct.h  xtp_api_data_type.h  xtp_api_struct.h  xtp_api_struct_common.h  xtp_quote_api.h  xtp_trader_api.h
C_porting_XTP/others/: CMakeLists.txt
C_porting_XTP/src/Platform/: CMakeLists.txt
cmake/: boost_common.cmake  qt5.cmake
devenv/: .gitignore  Makefile  Vagrantfile  golang_setup.sh  rustup-init.sh
go_src/: Makefile  main.go
go_src/lctp/: .gitignore  main.go
go_src/lctp/conf/: app.conf
go_src/lctp/controllers/: user.go
go_src/lctp/routers/: commentsRouter_controllers.go  router.go
go_src/lctp/static/js/: login_action.js
go_src/lctp/tests/: default_test.go
go_src/lctp/views/: index.tpl
go_src/queue/: xtp_message.go
go_src/queues/: init.go  xtp_message.go
go_src/xtp_wrapper/: event_handler.go  xtp_quote_spi.go  xtp_trader_spi.go
rust_src/: .gitignore
rust_src/cxtp_demo/: Cargo.toml
vs_build/: platform_build.bat
